ipc/ipdl/test/ipdl/error/multimanNonexistentMgrs.ipdl
protocol multimanNonexistentManagers {
    manager Starsky or Hutch;

child:
    async Dummy();
    async __delete__();
};
